--- a/app/assets/lang/_custom.toml
+++ b/app/assets/lang/_custom.toml
@@ -1,20 +1,20 @@
 # Custom Language File for Launcher Customizer
 
 [ejs.app]
-title = "LOFTY LAUNCHER"
+title = "Eldoria"
 
 [ejs.landing]
-mediaGitHubURL = "https://launcher.eraxium.com"
-mediaTwitterURL = "https://twitter.com/kasycraft_off"
-mediaInstagramURL = "https://www.instagram.com/kasycraft/"
-mediaYouTubeURL = "https://www.youtube.com/@kasycraft"
+mediaGitHubURL = "https://Eldoria-mc.fr"
+mediaTwitterURL = "https://twitter.com/Eldoria-mc"
+mediaInstagramURL = "https://www.instagram.com/Eldoria-mc/"
+mediaYouTubeURL = "https://www.youtube.com/@Eldoria-mc"
 mediaDiscordURL = "https://discord.eraxium.com"
 
 [ejs.settings]
-sourceGithubLink = "https://github.com/wiltark/LOFTYLAUNCHER"
-supportLink = "https://eraxium.com/support"
+sourceGithubLink = "https://github.com/wiltark/Eldoria"
+supportLink = "https://Eldoria-mc.com/support"
 
 [ejs.welcome]
-welcomeHeader = "BIENVENUE SUR LOFTY LAUNCHER"
+welcomeHeader = "BIENVENUE SUR Eldoria"
 welcomeDescription = "Le launcher cool."
 welcomeDescCTA = "Vous n'êtes qu'à quelques clics des modes packs."
